# Coursework-Kris

./: CMakeLists.txt  main.cpp
Lists/: animals.txt  feedings.txt
Tests/: ТЗ.txt  Тест ХТ.txt  Тест дерева.txt
include/: AnimalHashTable.h  CircularList.h  DynamicArray.h  FeedingTree.h  FiltersTree.h
src/: AnimalHashTable.cpp  CircularList.cpp  FeedingTree.cpp  FiltersTree.cpp
